Change the name of delete account button

--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -25,5 +25,5 @@
 <div class= 'Edit_Form'>
   <h3>Unhappy?</h3>
 
-  <p><%= button_to "Cancel my account", user_path(:user), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  <p><%= button_to "Delete my account", user_path(:user), data: { confirm: "Are you sure?" }, method: :delete %></p>
 </div>
